# c_game_engine

./: CMakeLists.txt  meson.build
Source/: pdex.elf  pdxinfo
engine/: animation.c  engine.c  entity.c  entity.h  entity_custom_def.h  entity_def.h  image.c  map.c  map.h  platform.c  platform.h  platform_playdate.c  platform_sdl.c  render.c  render.h  render_gl.c  render_playdate.c  render_software.c  utils.c  utils.h
src/: main.c  main.h
src/entities/: coin.c  player.c
src/scenes/: game.c
tools/: push.sh
